Grid non-frozen columns' footer cells are clipped during PDF export. Fixes #4760

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -920,7 +920,8 @@ html .k-grid-edit-row .k-tooltip
 }
 
 .k-pdf-export-shadow .k-grid-header-locked + .k-grid-header-wrap,
-.k-pdf-export-shadow .k-grid-content-locked + .k-grid-content {
+.k-pdf-export-shadow .k-grid-content-locked + .k-grid-content,
+.k-pdf-export-shadow .k-grid-footer-locked + .k-grid-footer-wrap {
     width: auto !important;
 }
 
